--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "sequelize": "^6.37.5"
+    "qrcode": "^1.5.4",
+    "sequelize": "^6.37.5",
+    "speakeasy": "^2.0.0"
   }
 }
